Add Google verificationg

--- a/templates/assessment.html
+++ b/templates/assessment.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patient {{ customer_number }} of 6</title>
+    <title>Insured Customer {{ customer_number }} of 6</title>
     <link rel="stylesheet" href="/static/styles.css">
     <script src="/static/slider.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Patient {{ customer_number }} of 6</h1>
+        <h1>Insured Customer {{ customer_number }} of 6</h1>
         <table class="info-table">
             <tr>
                 <th>Age</th>
