--- a/templates/index.html
+++ b/templates/index.html
@@ -11,14 +11,14 @@
         <h1>Medical Cost Estimation Study</h1>
         <p>Thank you for participating in our research to estimate medical costs!</p>
         <h2>About the Study</h2>
-        <p>Imagine that you are a medical insurance employee and you need to estimate medical costs (the expenses for healthcare services patients incur) based on the following patient information:</p>
+        <p>Imagine that you are a medical insurance employee and you need to estimate medical costs (the expenses for healthcare services incured by Insured Customers) based on the following information:</p>
         <ul>
             <li>Age</li>
             <li>BMI (Body Mass Index)</li>
             <li>Smoker Status</li>
         </ul>
-        <p>You will first see a few examples to help you understand how medical costs relate to patient information. Then, you will complete six practice tasks to improve your accuracy, followed by six main tasks.</p>
-        <p>Your performance will be measured by how many times (out of the 8 main tasks) your estimate is as good as or better than the automated algorithm’s prediction. Pay close attention to the information provided in the practice tasks and during the main tasks to improve your estimates.</p>
+        <p>You will first see a few examples to help you understand how medical costs relate to insured customer information. Then, you will complete six practice tasks to improve your accuracy, followed by six main tasks.</p>
+        <p>Your performance will be measured by how many times your estimate is as good as or better than the automated algorithm’s prediction. Pay close attention to the information provided in the practice tasks and during the main tasks to improve your estimates.</p>
         <p>Please note that there are a few attention check questions included in the study to ensure data quality. Make sure to read each question carefully.</p>
         <h2>Time</h2>
         <p>~6 minutes</p>
