--- a/templates/practice_result.html
+++ b/templates/practice_result.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice Result: Patient {{ customer_number }} of 6</title>
+    <title>Practice Result: {{ customer_number }} of 6</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Practice Result: Patient {{ customer_number }} of 6</h1>
+        <h1>Practice Result: {{ customer_number }} of 6</h1>
         <p style="font-size: 16px;">{{ performance_message }}</p>
         <table class="info-table">
             <tr>
