--- a/templates/review_condition3.html
+++ b/templates/review_condition3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Review: Patient {{ customer_number }} of 6</title>
+    <title>Review: Insured Customer {{ customer_number }} of 6</title>
     <link rel="stylesheet" href="/static/styles.css">
     <script src="/static/slider.js"></script>
     <script>
@@ -25,7 +25,7 @@
 <body>
     <div class="container">
         <div class="section">
-            <h1>Review: Patient {{ customer_number }} of 6</h1>
+            <h1>Review: Insured Customer {{ customer_number }} of 6</h1>
             <table class="info-table">
                 <tr>
                     <th>Age</th>
@@ -44,14 +44,14 @@
         </div>
         {% if not submitted %}
             <div class="section" id="submission-section">
-                <p style="font-size: 18px; font-weight: bold; color: #1a3c6d;">Up to 5% variability in the algorithm’s prediction is a reliable interval{% if task_data.uncertainty_level != 3 %} but{% endif %} the algorithm shows {% if task_data.uncertainty_level == 1 %}±60%{% elif task_data.uncertainty_level == 2 %}±30%{% else %}±5%{% endif %} variability for this prediction.</p>
+                <p style="font-size: 18px; font-weight: bold; color: #1a3c6d;">Up to 5% variability in Company's Automated Algorithm's prediction is a reliable interval{% if task_data.uncertainty_level != 3 %} but{% endif %} the algorithm shows {% if task_data.uncertainty_level == 1 %}±60%{% elif task_data.uncertainty_level == 2 %}±30%{% else %}±5%{% endif %} variability for this prediction.</p>
                 <p style="color: #1a3c6d;">The algorithm prediction falls somewhere in this range:</p>
                 <div class="chart-container">
                     <img src="data:image/png;base64,{{ info_data }}" alt="Cost Range">
                 </div>
                 <form id="guess-form" action="{{ url_for('stage2') }}" method="post">
                     <div class="slider-container">
-                        <label for="final_guess">Adjust Your Estimated Medical Cost ($1–$30,000) <span style="color: red;">*</span>:</label>
+                        <label for="final_guess">Now you can adjust your estimated medical Cost: <span style="color: red;">*</span>:</label>
                         <input type="range" id="final_guess" min="1" max="30000">
                         <div class="slider-labels">
                             <span>$1</span>
