--- a/templates/end.html
+++ b/templates/end.html
@@ -19,7 +19,7 @@
             <p id="instructions">Please provide your feedback on the Automated Algorithm used in this experiment:</p>
             <form id="survey-form" action="{{ url_for('task') if not ended_early else url_for('end_with_error') }}" method="post" onsubmit="hideForm()">
                 <div class="section">
-                    <p>1. I trust that the Automated Algorithm’s prediction of medical costs.</p>
+                    <p>1. I trust the Automated Algorithm’s prediction of medical costs.</p>
                     <div class="radio-container">
                         <label><input type="radio" name="trust" value="1" required> Strongly Disagree</label>
                         <label><input type="radio" name="trust" value="2"> Disagree</label>
