Add Google verificationg

--- a/templates/end.html
+++ b/templates/end.html
@@ -11,6 +11,12 @@
             document.getElementById('instructions').style.display = 'none';
         }
     </script>
+    <style>
+        .radio-container label {
+            display: block;
+            margin: 10px 0;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
